--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-starter-kit",
+  "name": "group-maker",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -30,6 +30,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   }
